# long-exposure

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile  Dockerfile.dev  pyproject.toml
api/src/long_exposure_api/: main.py
deploy/: INFRA-NOTES.md
docs/: analytics-catalog.md  architecture.md  concepts.md  cost-model-and-wiring.md  decisions.md  frontend-audit.md  interpretation-design.md  launch-sprint.md  layer-0-design.md  operations.md  phase8-v2-parallelization.md  pipeline-architecture.md  pipeline-internals.md  plan.md  protocol-notes.md  scoring-and-narration.md  status-2026-05-31.md  temporal-design.md  tiered-baselines-design.md  todo.md  validation-results.md
docs/sql/: prune-stale-narrations.sql  spot-check.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.svelte  main.js
parser/: .dockerignore  Dockerfile  Dockerfile.dev  build.gradle.kts  settings.gradle.kts
parser/src/main/resources/: pattern-catalog.md  schema.sql
scripts/: backfill-prior-week.sh  backfill-week.sh  catchup-2026-05-29.sh  docs-check.sh  overnight-chain-2026-05-29.sh  overnight-heartbeat.sh  post-catchup-2026-05-29.sh  rerun-dataset-v2.sh  rerun-dataset-v3.sh  rerun-dataset.sh  rerun-resume.sh  rescore-rerun-2026-05-29.log.broken-input-bug  rescore-rerun-2026-05-29.sh  test-1day-continue-from-narrate.sh  test-1day-tierAB-052228.sh  v14-overnight-monitor.sh  validate-analytics.sql
scripts/_archive/: rerun-dataset-v2.stdout
(+254 files in other folders)
